[gd_scene load_steps=9 format=3 uid="uid://y5w5ax7wrlb1"]

[ext_resource type="Script" path="res://scenes/ui/screens/title_screen/title_screen.gd" id="1_trgpu"]
[ext_resource type="PackedScene" uid="uid://bwu1q6jxr4um6" path="res://scenes/main/main.tscn" id="2_47ntb"]
[ext_resource type="Texture2D" uid="uid://bmic06qelt7ya" path="res://resources/images/title_screen_bg.png" id="3_2uee6"]
[ext_resource type="Texture2D" uid="uid://b5iiug55wa6y5" path="res://assets/sprite_sheets/Modern_UI_Style_1_32x32.png" id="4_3vffk"]
[ext_resource type="PackedScene" uid="uid://d1eitwwemjsyw" path="res://scenes/ui/options_menu/options_menu.tscn" id="5_iwjkx"]

[sub_resource type="AtlasTexture" id="AtlasTexture_pu62w"]
atlas = ExtResource("4_3vffk")
region = Rect2(908, 650, 10, 14)

[sub_resource type="AtlasTexture" id="AtlasTexture_cdk01"]
atlas = ExtResource("4_3vffk")
region = Rect2(936, 586, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_jk7ag"]
atlas = ExtResource("4_3vffk")
region = Rect2(870, 680, 20, 18)

[node name="TitleScreen" type="CanvasLayer"]
script = ExtResource("1_trgpu")
main_scene = ExtResource("2_47ntb")

[node name="TitleScreen" type="PanelContainer" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -176.0
offset_top = -85.5
offset_right = 176.0
offset_bottom = 85.5
grow_horizontal = 2
grow_vertical = 2
rotation = -0.00144258
size_flags_horizontal = 4
size_flags_vertical = 4

[node name="MarginContainer" type="MarginContainer" parent="TitleScreen"]
layout_mode = 2
size_flags_horizontal = 4
theme_override_constants/margin_left = 2
theme_override_constants/margin_top = 2
theme_override_constants/margin_right = 2
theme_override_constants/margin_bottom = 2

[node name="MainMenu" type="TextureRect" parent="TitleScreen/MarginContainer"]
unique_name_in_owner = true
layout_mode = 2
texture = ExtResource("3_2uee6")

[node name="MainMenuButtons" type="VBoxContainer" parent="TitleScreen/MarginContainer/MainMenu"]
unique_name_in_owner = true
custom_minimum_size = Vector2(300, 0)
layout_mode = 2
offset_left = 250.0
offset_top = 316.0
offset_right = 550.0
offset_bottom = 483.0
size_flags_horizontal = 4
size_flags_vertical = 4

[node name="PlayButton" type="Button" parent="TitleScreen/MarginContainer/MainMenu/MainMenuButtons"]
unique_name_in_owner = true
layout_mode = 2
text = "Play"
icon = SubResource("AtlasTexture_pu62w")

[node name="Control2" type="Control" parent="TitleScreen/MarginContainer/MainMenu/MainMenuButtons"]
custom_minimum_size = Vector2(0, 20)
layout_mode = 2

[node name="OptionsButton" type="Button" parent="TitleScreen/MarginContainer/MainMenu/MainMenuButtons"]
unique_name_in_owner = true
layout_mode = 2
text = "Options"
icon = SubResource("AtlasTexture_cdk01")

[node name="Control" type="Control" parent="TitleScreen/MarginContainer/MainMenu/MainMenuButtons"]
custom_minimum_size = Vector2(0, 20)
layout_mode = 2

[node name="CreditsButton" type="Button" parent="TitleScreen/MarginContainer/MainMenu/MainMenuButtons"]
layout_mode = 2
text = "Credits"
icon = SubResource("AtlasTexture_jk7ag")

[node name="OptionsMenu" parent="TitleScreen/MarginContainer" instance=ExtResource("5_iwjkx")]
unique_name_in_owner = true
visible = false
layout_mode = 2
